--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <li><a href="#pillars">Pillars</a></li>
                 <li><a href="#fields">Fields</a></li>
                 <li><a href="#resources">Resources</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
