--- a/about.html
+++ b/about.html
@@ -22,8 +22,10 @@
             --gray-medium: #8A94A6;
         }
 
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap');
+
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
             color: var(--white);
             background-color: var(--navy-dark);
@@ -104,13 +106,14 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            backdrop-filter: blur(10px);
-            transition: all 0.3s ease;
+            backdrop-filter: blur(20px);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         header.scrolled {
             padding: 0.7rem 0;
             box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+            background-color: rgba(10, 37, 64, 0.98);
         }
 
         nav {
@@ -124,11 +127,13 @@
             font-weight: 600;
             color: var(--white);
             letter-spacing: -0.5px;
-            transition: transform 0.3s ease;
+            font-family: 'JetBrains Mono', monospace;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .logo:hover {
-            transform: scale(1.05);
+            color: var(--cyan);
+            transform: translateY(-1px);
         }
 
         .nav-links {
@@ -144,24 +149,26 @@
             font-size: 0.9rem;
             font-weight: 400;
             opacity: 0.8;
-            transition: opacity 0.3s, transform 0.3s;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
+            padding: 0.5rem 0;
         }
 
         .nav-links a::after {
             content: '';
             position: absolute;
-            bottom: -5px;
+            bottom: 0;
             left: 0;
             width: 0;
             height: 2px;
-            background: var(--blue-bright);
-            transition: width 0.3s ease;
+            background: linear-gradient(90deg, var(--cyan), var(--blue-bright));
+            transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .nav-links a:hover {
             opacity: 1;
-            transform: translateY(-2px);
+            color: var(--cyan);
+            transform: translateY(-1px);
         }
 
         .nav-links a:hover::after {
@@ -197,6 +204,10 @@
             font-weight: 300;
             line-height: 1.2;
             margin-bottom: 1rem;
+            background: linear-gradient(135deg, var(--white) 0%, var(--cyan) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .hero-subtitle {
@@ -252,11 +263,12 @@
         .value-card {
             background: var(--navy-medium);
             padding: 2.5rem;
-            border-radius: 8px;
+            border-radius: 12px;
             border-left: 3px solid var(--blue-bright);
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
             overflow: hidden;
+            border: 1px solid rgba(255,255,255,0.05);
         }
 
         .value-card::before {
@@ -276,7 +288,8 @@
 
         .value-card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 15px 40px rgba(46, 92, 255, 0.2);
+            box-shadow: 0 15px 40px rgba(46, 92, 255, 0.3);
+            border-color: rgba(0, 212, 255, 0.3);
         }
 
         .value-number {
@@ -292,6 +305,8 @@
             margin-bottom: 1rem;
             line-height: 1.3;
             transition: color 0.3s ease;
+            position: relative;
+            z-index: 1;
         }
 
         .value-card:hover h3 {
@@ -302,6 +317,13 @@
             color: var(--gray-medium);
             font-size: 1rem;
             line-height: 1.7;
+            position: relative;
+            z-index: 1;
+            transition: color 0.3s ease;
+        }
+
+        .value-card:hover p {
+            color: var(--white);
         }
 
         /* Manifesto Section */
@@ -309,9 +331,16 @@
             background: var(--navy-medium);
             padding: 5rem 0;
             margin: 4rem 0;
-            border-radius: 16px;
+            border-radius: 20px;
             position: relative;
             overflow: hidden;
+            border: 1px solid rgba(255,255,255,0.05);
+            transition: all 0.3s ease;
+        }
+
+        .manifesto:hover {
+            border-color: rgba(0, 212, 255, 0.2);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
         }
 
         .manifesto::before {
@@ -382,12 +411,13 @@
         .pillar-card {
             background: var(--navy-medium);
             padding: 2.5rem;
-            border-radius: 8px;
+            border-radius: 12px;
             text-align: center;
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             border-top: 3px solid var(--blue-bright);
             position: relative;
             overflow: hidden;
+            border: 1px solid rgba(255,255,255,0.05);
         }
 
         .pillar-card::before {
@@ -409,6 +439,7 @@
         .pillar-card:hover {
             transform: translateY(-8px);
             box-shadow: 0 15px 40px rgba(46, 92, 255, 0.3);
+            border-color: rgba(0, 212, 255, 0.3);
         }
 
         .pillar-card h4 {
@@ -431,6 +462,11 @@
             line-height: 1.7;
             position: relative;
             z-index: 1;
+            transition: color 0.3s ease;
+        }
+
+        .pillar-card:hover p {
+            color: var(--white);
         }
 
         /* Footer */
@@ -464,12 +500,29 @@
             margin-bottom: 0.8rem;
             opacity: 0.7;
             font-size: 0.9rem;
-            transition: opacity 0.3s, transform 0.3s;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .footer-section a::after {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 0;
+            height: 1px;
+            background: var(--cyan);
+            transition: width 0.3s ease;
         }
 
         .footer-section a:hover {
             opacity: 1;
+            color: var(--cyan);
             transform: translateX(5px);
+        }
+
+        .footer-section a:hover::after {
+            width: 100%;
         }
 
         .footer-bottom {
@@ -480,10 +533,23 @@
             font-size: 0.85rem;
         }
 
+        /* Smooth scrolling */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        /* Enhanced responsive design */
+        @media (max-width: 1200px) {
+            .container, .container-narrow {
+                padding: 0 2rem;
+            }
+        }
+
         @media (max-width: 968px) {
             .values-grid,
             .pillars-grid {
                 grid-template-columns: 1fr;
+                gap: 1.5rem;
             }
 
             .hero h1 {
@@ -496,6 +562,37 @@
 
             .manifesto-content {
                 padding: 0 2rem;
+            }
+
+            .nav-links {
+                gap: 1rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2rem;
+            }
+
+            .nav-links {
+                display: none;
+            }
+
+            .footer-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .manifesto-content {
+                padding: 0 1.5rem;
+            }
+
+            .value-card, .pillar-card {
+                padding: 2rem;
+            }
+
+            .manifesto {
+                padding: 3rem 0;
             }
         }
     </style>
@@ -725,13 +822,36 @@
             });
         });
 
-        // Add parallax effect to hero section
+        // Enhanced scroll effects
         window.addEventListener('scroll', () => {
             const scrolled = window.pageYOffset;
             const hero = document.querySelector('.hero');
             if (hero) {
-                hero.style.transform = `translateY(${scrolled * 0.5}px)`;
+                hero.style.transform = `translateY(${scrolled * 0.3}px)`;
             }
+        });
+
+        // Enhanced card hover effects
+        document.querySelectorAll('.value-card, .pillar-card').forEach(card => {
+            card.addEventListener('mouseenter', function() {
+                this.style.transform = 'translateY(-8px) scale(1.02)';
+            });
+            
+            card.addEventListener('mouseleave', function() {
+                this.style.transform = 'translateY(0) scale(1)';
+            });
+        });
+
+        // Manifesto text hover effects
+        document.querySelectorAll('.manifesto-content p').forEach(paragraph => {
+            paragraph.addEventListener('mouseenter', function() {
+                this.style.transform = 'translateX(10px)';
+                this.style.transition = 'transform 0.3s ease';
+            });
+            
+            paragraph.addEventListener('mouseleave', function() {
+                this.style.transform = 'translateX(0)';
+            });
         });
     </script>
 </body>
