Replace index.html and add css/styles.css and js/main.js and Logo.jpg

--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
         <div class="absolute inset-0 z-0">
             <div class="absolute inset-0 bg-black/30 z-10"></div> <!-- Overlay -->
             <video class="w-full h-full object-cover glow-animation" autoplay loop muted playsinline>
-                <source src="Graphic  Motion/vidu-video-3083082346646760.mp4" type="video/mp4">
+                <source src="Graphic  Motion/banner1/banner1.mp4" type="video/mp4">
             </video>
         </div>
 
         <div class="text-center max-w-4xl mx-auto z-10 pt-20">
-
 
 
 
@@ -425,6 +424,60 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <!-- Videos Section -->
+    <section id="videos" class="videos-section py-24 px-6 md:px-12 max-w-[90rem] mx-auto border-t border-white/5">
+        <div class="max-w-7xl mx-auto px-6 mb-16 text-center">
+            <h2 class="reveal-text text-3xl md:text-5xl font-bold mb-6">LATEST <span class="text-gray-600">VIDEOS</span>
+            </h2>
+            <p class="reveal-text text-gray-400 max-w-2xl mx-auto font-light text-lg">
+                Curated vertical selections.
+            </p>
+        </div>
+
+        <div class="grid grid-cols-2 md:grid-cols-5 gap-4">
+            <!-- Video 1 -->
+            <div class="aspect-[9/16] bg-gray-900 rounded-sm overflow-hidden relative group">
+                <video
+                    class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-500"
+                    autoplay loop muted playsinline>
+                    <source src="videos/916/%23model%23fashion%23wee%23photoshoot%23ai.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- Video 2 -->
+            <div class="aspect-[9/16] bg-gray-900 rounded-sm overflow-hidden relative group">
+                <video
+                    class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-500"
+                    autoplay loop muted playsinline>
+                    <source src="videos/916/Crema%20CARa%20(1).mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- Video 3 -->
+            <div class="aspect-[9/16] bg-gray-900 rounded-sm overflow-hidden relative group">
+                <video
+                    class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-500"
+                    autoplay loop muted playsinline>
+                    <source src="videos/916/FinalShort.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- Video 4 (Repeat 1) -->
+            <div class="aspect-[9/16] bg-gray-900 rounded-sm overflow-hidden relative group">
+                <video
+                    class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-500"
+                    autoplay loop muted playsinline>
+                    <source src="videos/916/%23model%23fashion%23wee%23photoshoot%23ai.mp4" type="video/mp4">
+                </video>
+            </div>
+            <!-- Video 5 (Repeat 2) -->
+            <div class="aspect-[9/16] bg-gray-900 rounded-sm overflow-hidden relative group">
+                <video
+                    class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-500"
+                    autoplay loop muted playsinline>
+                    <source src="videos/916/Crema%20CARa%20(1).mp4" type="video/mp4">
+                </video>
             </div>
         </div>
     </section>
